WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313870
macCatalyst engineering builds are broken (-Wobjc-property-no-attribute in VKCImageAnalyzerRequestVIConfiguration.h)
https://bugs.webkit.org/show_bug.cgi?id=313870
Summary
macCatalyst engineering builds are broken (-Wobjc-property-no-attribute in VK...
Abrar Rahman Protyasha
Reported
2026-05-01 19:42:52 PDT
rdar://167728365
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-05-01 19:49:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64084
EWS
Comment 2
2026-05-05 19:15:23 PDT
Committed
312662@main
(9383551f3b49): <
https://commits.webkit.org/312662@main
> Reviewed commits have been landed. Closing PR #64084 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug