macCatalyst engineering builds are broken (-Wobjc-property-no-attribute in VKCImageAnalyzerRequestVIConfiguration.h) https://bugs.webkit.org/show_bug.cgi?id=313870 rdar://167728365

Reviewed by Richard Robinson.

The macCatalyst build is broken with the following error:

```
In file included from /Source/WebKit/Platform/cocoa/ImageAnalysisUtilities.mm:27:
In file included from /Source/WebKit/Platform/cocoa/ImageAnalysisUtilities.h:30:
In file included from /Build/Release-maccatalyst/usr/local/include/pal/spi/cocoa/VisionKitCoreSPI.h:48:
In file included from /SDK/Path/To/VisionKitCore.h:32:
/SDK/Path/To/VKCImageAnalyzerRequestVIConfiguration.h:26:1: error: no 'assign', 'retain', or 'copy' attribute is specified - 'assign' is assumed [-Werror,-Wobjc-property-no-attribute]
   26 | @property (nonatomic) NSNumber *isScreenshotsVLUAuthorized;
```

This is a bug in the SDK header, and the `DECLARE_SYSTEM_HEADER pragma`
in this file should suppress it, but -Wobjc-property-no-attribute
appears to not be suppressed by #pragma clang system_header in this
context.

To work around this issue, we wrap the VisionKitCore.h import in
`IGNORE_WARNINGS_BEGIN/END`, matching the existing pattern two lines
above for the "undef" warning around VKImageAnalysis_WebKit.h.

* Source/WebCore/PAL/pal/spi/cocoa/VisionKitCoreSPI.h:

Canonical link: https://commits.webkit.org/312662@main